# weatherml.github.io

./: .gitignore  404.html  README.md  all_papers.bib  build_pages.py  categorize_papers.py  find_papers.py  index.html  mkdocs.yml  papers.yml  pyproject.toml  requirements.txt  search.json  sitemap.xml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  update_papers.yml
bibtex/: 2202.11214.bib  2204.01926.bib  2205.13158.bib  2211.02556.bib  2301.03748.bib  2306.06079.bib  2312.12455.bib  2312.15796.bib  2408.06400.bib  2408.10854.bib  2509.08802.bib  2509.11047.bib  2509.12147.bib  2509.12490.bib  2509.14586.bib  2509.17252.bib  2509.17625.bib  2509.18811.bib  2509.18994.bib  2509.19605.bib  2509.20911.bib  2509.25578.bib  2509.25631.bib  2509.26258.bib  2510.00479.bib  2510.00594.bib  2510.04006.bib  2510.06180.bib  2510.06440.bib  2510.07953.bib  2510.08107.bib  2510.13301.bib  2510.13722.bib  2510.14962.bib  2510.19701.bib  2510.20228.bib  2510.20316.bib  2510.20410.bib  2510.23794.bib  2510.23866.bib  (+65 more)
data_assimilation/: index.html
docs/: all_papers.bib  data_assimilation.md  downscaling.md  ensembles.md  global_models.md  index.md  new.md  nowcasting.md  papers.md  tags.md
docs/bibtex/: 2003.12140.bib  2212.02968.bib  2212.12794.bib  2311.17961.bib  2312.12455.bib  (+36 more)
downscaling/: index.html
ensembles/: index.html
global_models/: index.html
javascripts/: bibtex.js
new/: index.html
nowcasting/: index.html
papers/: index.html
search/: search_index.json
site/: 404.html  index.html
stylesheets/: extra.css
tags/: index.html
(+8 files in other folders)
