[project]
name = "weatherml"
version = "0.1.0"
description = "Deep Learning in Weather - automated paper curation from arXiv"
requires-python = ">=3.11"
dependencies = [
    "zensical",
    "pyyaml",
    "arxiv",
]

[project.scripts]
find-papers = "find_papers:find_new_papers"
build-pages = "build_pages:build_pages"
categorize = "categorize_papers:main"
